Updated login screen text
Signed-off-by: Zammit <john.zammit@vodafone.com>

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 
   <div class="card">
     <div class="card-body register-card-body">
-      <p class="login-box-msg">Log in to your Vodafone account</p>
+      <p class="login-box-msg">Log in using your Vodafone account</p>
 
       <!-- form start -->
       <form role="form" id="loginForm">
