--- a/login.html
+++ b/login.html
@@ -38,13 +38,15 @@
           <input type="username" name="username" class="form-control" id="username" placeholder="Username">
         </div>
         <div class="form-group">
-          <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+          <input type="password" name="password" class="form-control" id="password" placeholder="Password" autocomplete="on">
         </div>
       
         <div class="row">
-          <p class="login-box-msg"><small><b>Your credentials are not stored on RIMS.</b> Verification of credentials is performed using <a href="https://en.wikipedia.org/wiki/Lightweight_Directory_Access_Protocol">LDAP</a> authentication.</small></p>
+          <p class="login-box-msg">
+            <small><b>Your credentials are not stored on RIMS.</b> Verification of credentials is performed using <a href="https://en.wikipedia.org/wiki/Lightweight_Directory_Access_Protocol" target="_blank">LDAP</a> authentication.</small>
+          </p>
           <div class="col-6 mx-auto">
-            <button type="submit" class="btn btn-default btn-block">Sign in</button>
+            <button type="submit" class="btn btn-default btn-block">Log in</button>
           </div>
         </div>
       </form>
