--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
 
   <div class="card">
     <div class="card-body register-card-body">
-      <p class="login-box-msg">Log in using your Vodafone account</p>
+      <p class="login-box-msg">Log in using your corporate account</p>
 
       <!-- form start -->
       <form role="form" id="loginForm">
@@ -101,6 +101,7 @@ $(document).ready(function () {
             window.location.href = 'index.php';
           } else {
             alert(data['message']);
+            location.reload();
           }
         }
       });
