Disabling of UI elements according to user privileges - UI elements (buttons/modals) disabled accordingly - validKey() renamed to validAction() - Updated validate_session users api - Updated api docs

--- a/login.html
+++ b/login.html
@@ -83,6 +83,7 @@ $(document).ready(function () {
     submitHandler: function () {
       $.ajax({
         type: "POST",
+        cache: false, // due to aggressive caching on IE 11
         url: 'api/users/login.php',
         dataType: 'json',
         data: {
@@ -94,9 +95,7 @@ $(document).ready(function () {
         },
         success: function(data) {
           if (data['status'] == true) {
-            localStorage.setItem('id', data['id']);
-            localStorage.setItem('firstname', data['firstname']);
-            localStorage.setItem('lastname', data['lastname']);
+            localStorage.setItem('userid', data['id']);
             localStorage.setItem('sessionId', data['sessionId']);
             window.location.href = 'index.php';
           } else {
